--- a/portfolio page/portfolio_update_v1/styles.css
+++ b/portfolio page/portfolio_update_v1/styles.css
@@ -97,7 +97,7 @@ header .profile-image:hover {
   margin: 10px auto;
 } 
 .location {
-  background-color #efefef;
+  background-color: #efefef;
   color: rgb(0, 173, 204);
 }
 .card {
